Stabilize collector and dashboard cache